<resources>
    <string name="app_name">Ben ik normaal?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_speel">Speel!</string>
    <string name="nav_account">Account</string>
    <string name="nav_vraagToevoegen">Vraag toevoegen</string>
    <string name="nav_mijnVragen">Mijn vragen</string>
    <string name="nav_instructies">Instructies</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_uitloggen">Uitloggen</string>


   <!-- <string name="credits_message">credits_message</string>
    <string name="credits_title">credits_title</string>
    <string name="credits_button">credits_button</string> -->

</resources>
