<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_speel"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_speel"/>
           <!-- android:onClick="CreditPopUp"/>-->
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_vraagToevoegen"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_vraagToevoegen" />
        <item
            android:id="@+id/nav_mijnVragen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_mijnVragen" />
        <item
            android:id="@+id/nav_instructies"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_instructies" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_credits" />
        <item
            android:id="@+id/nav_uitloggen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_uitloggen" />
    </group>

  <!--  <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
